<resources>
    <string name="app_name">SIAP-CERIA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_index">indexActivity</string>

    <!-- Naviagation -->
    <string name="title_home">Home</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_profil">Profil</string>
    <string name="title_help">Help</string>

    <!-- Splash screen -->
    <string name="splash">RSUD AJIBARANG</string>
    <string name="copyright">© IT RSUD Ajibarang</string>

    <!-- Daftar -->
    <string name="daftar">Daftar</string>
    <string name="ket_daftar">Silahkan isi field dibawah ini</string>
    <string name="btndftr">Simpan</string>
    <string name="dftr_nik">NIK</string>
    <string name="dftr_nama_dpn">Nama Depan</string>
    <string name="dftr_nama_blk">Nama Belakang</string>
    <string name="dftr_email">Email</string>
    <string name="dftr_nohp">No Hp</string>
    <string name="dftr_password">Password</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="ket_login">Anda perlu login terlebih dahulu untuk mendaftar</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <!-- Lupa password -->
    <string name="lupa_password">Lupa Password</string>
    <string name="ket_password">Masukan email anda, kami akan mengirim link untuk mengubah password anda.</string>
    <string name="nohp">No. HP</string>
    <string name="konfirmasi">Konfirmasi</string>

    <!-- Pendaftaran pasien -->
    <string name="reg_pasien_baru">Pasien Baru</string>
    <string name="reg_pasien_lama">Pasien Lama</string>

    <!-- Pasien Baru -->
    <string name="pb_hubungan">Hubungan</string>
    <string name="pb_nama">Nama</string>
    <string name="pb_nik">NIK</string>
    <string name="pb_jk">Jenis Kelamin</string>
    <string name="pb_tempat_lahir">Tempat Lahir</string>
    <string name="pb_alamat">Alamat sesuai KTP</string>
    <string name="pb_provinsi">Provinsi</string>
    <string name="pb_kabupaten">Kabupaten</string>
    <string name="pb_kecamatan">Kecamatan</string>
    <string name="pb_kelurahan">Kelurahan</string>
    <string name="pb_ayah">Nama Ayah</string>
    <string name="pb_ibu">Nama Ibu</string>
    <string name="pb_suami">Nama Suami</string>
    <string name="pb_istri">Nama Istri</string>
    <string name="pb_no_telephon">Nomor Telephon</string>
    <string name="pb_agama">Agama</string>
    <string name="pb_pendidikan">Pendidikan</string>
    <string name="pb_pekerjaan">Pekerjaan</string>
    <string name="pb_status_kawin">Status Kawin</string>
    <string name="pb_kewarganegaraan">Kewarganegaraan</string>
    <string name="pb_wni">WNI</string>
    <string name="pb_wna">WNA</string>
    <string name="pb_suku">Suku</string>
    <string name="pb_bahasa_daerah">Bahsa Daerah</string>
    <string name="btnnext">Next</string>
    <string name="pb_title">Title</string>

    <!-- Pasien Lama -->
    <string name="pl_hubungan">Hubungan</string>
    <string name="pl_norm">Nomor Rekam Medik / Nomor Pasien</string>
    <string name="pl_tgl_lahir">Tanggal Lahir</string>
    <string name="pl_no_telephon">Nomor Telephon</string>
    <string name="pl_email">Email</string>
    <string name="plh_hubungan">Pilih Hubungan</string>
    <string name="plh_norm">Masukan Nomor Rekam Medik</string>
    <string name="plh_tgl_lahir">Pilih Tanggal Lahir</string>
    <string name="plh_no_telephon">Masukan Nomor Telephon</string>
    <string name="plh_email">Masukan Email</string>
    <string name="btn_pl_daftar">Daftar</string>
    <string name="ictgl">icon tanggal</string>

    <!-- Pendaftaran Online -->
    <string name="po_tgl">Tanggal Kontrol</string>
    <string name="po_penjamin">Penjamain</string>
    <string name="po_nmrbpjs">Nomor BPJS</string>
    <string name="po_nmrrujukan">Nomor rujukan</string>
    <string name="po_btndftr">Daftar</string>
    <string name="poh_tgl">Pilih Tanggal</string>
    <string name="poh_penjamin">Pilih Penjamin</string>
    <string name="poh_nmrbpjs">Masukan Nomor BPJS</string>
    <string name="poh_nmrrujukan">Masukan Nomor Rujukan</string>

    <!--fragment Home -->
    <string name="dftr">Pendaftaran Poliklinik</string>
    <string name="cek">Cek Jadwal Dokter</string>
    <string name="desdftr">Ini button daftar</string>
    <string name="desjdwl">Ini button jadwal</string>

    <!-- fragment profil -->
    <string name="fp_datapasien">Data Pasien Terdaftar</string>
    <string name="fp_sk">Syarat dan Ketentuan</string>
    <string name="fp_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    ini untuk memanggil jenis kelamin-->
    <string-array name="jenis_kelamin">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>

    <!--    Ini untuk list bantuan-->
    <string-array name="list_bantuan">
        <item>Bagaimana cara mendaftar akun?</item>
        <item>Bagaimana saya mengganti no. HP?</item>
        <item>Bagaimana cara menjadwal ulang antrian yang batal?</item>
    </string-array>
</resources>
