<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Fragment_Dftronline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_tgl" />

            <EditText
                android:id="@+id/potgl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/poh_tgl"
                android:importantForAutofill="no"
                android:inputType="date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_penjamin" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/poh_penjamin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_nmrbpjs" />

            <EditText
                android:id="@+id/ponmrbpjs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/poh_nmrbpjs"
                android:importantForAutofill="no"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_nmrrujukan" />

            <EditText
                android:id="@+id/ponmrrujukan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/poh_nmrrujukan"
                android:importantForAutofill="no"
                android:inputType="number" />

            <Button
                android:id="@+id/btnpodaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/po_btndftr"
                android:textColor="@color/putih"
                android:background="@drawable/selector_xml_btn_yellow"/>

        </LinearLayout>

</RelativeLayout>