<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".forgetpassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:padding="40dp"
            android:paddingTop="0dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:text="@string/lupa_password"
                android:textColor="@color/birunyacinta"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/ket_password"
                android:textColor="@color/colorDivider"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/fpemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/login_password_hint"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/colorDivider"
                android:textColorHint="@color/abuabu"
                android:backgroundTint="@color/birunyacinta"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/fpnohp"
                android:layout_width="332dp"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/nohp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/colorDivider"
                android:textColorHint="@color/abuabu"
                android:backgroundTint="@color/birunyacinta"
                android:inputType="number"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnsimpanlupapassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_xml_btn_yellow"
                android:text="@string/konfirmasi"
                android:textColor="@color/putih"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>