<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    tools:context=".daftarakun">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:padding="20dp"
            android:orientation="vertical"
            android:paddingTop="0dp">

<!--            <ImageView-->
<!--                android:id="@+id/regis_title"-->
<!--                android:layout_width="308dp"-->
<!--                android:layout_height="129dp"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_alignParentLeft="true"-->
<!--                android:layout_gravity="center_vertical|center_horizontal|center"-->
<!--                android:paddingLeft="11dp"-->
<!--                app:srcCompat="@drawable/siapceria2" />-->

            <TextView
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:textColor="@color/birunyacinta"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="371dp"
                android:layout_height="wrap_content"
                android:text="@string/ket_daftar"
                android:textColor="@color/abuabu"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dftr_nik"
                android:textColor="@color/colorDivider" />

            <EditText
                android:id="@+id/nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/edittexts"
                android:hint="Masukan NIK"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorDivider"
                android:textColorHint="@color/abuabu"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dftr_nama_dpn"
                android:textColor="@color/colorDivider" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/edittexts"
                android:hint="Nama Depan"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorDivider"
                android:textColorHint="@color/abuabu"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dftr_nama_blk"
                android:textColor="@color/colorDivider" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/edittexts"
                android:hint="Nama Belakang"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorDivider"
                android:textColorHint="@color/abuabu"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dftr_email"
                android:textColor="@color/colorDivider" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/edittexts"
                android:hint="Email"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorDivider"
                android:textColorHint="@color/abuabu"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dftr_nohp"
                android:textColor="@color/colorDivider" />

            <EditText
                android:id="@+id/nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/edittexts"
                android:hint="Masukan Nomor HP"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorDivider"
                android:textColorHint="@color/abuabu"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/dftr_password"
                android:textColor="@color/colorDivider" />

            <EditText
                android:id="@+id/passworddaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/edittexts"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorDivider"
                android:textColorHint="@color/abuabu"
                android:textSize="14sp" />

            <Button
                android:id="@+id/daftarsimpan"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_xml_btn_yellow"
                android:padding="10dp"
                android:text="@string/btndftr"
                android:textColor="@color/putih"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>